# bmf_ai_agent

./: .env.example  .gitignore  BFM AI Agent.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  sample_data.xlsx  ~$sample_data.xlsx
data/: bfm_demo.db  bfm_demo_data.xlsx  ~$bfm_demo_data.xlsx
frontend/: build.mjs
frontend/src/: main.jsx
src/bfm_agent/: __init__.py  analytics.py  app.py  config.py  db.py  gmail.py  langfuse_utils.py  llm.py  models.py  schemas.py  seed_data.py
src/bfm_agent/agent/: graph.py
src/bfm_agent/static/: app.css  app.js
src/bfm_agent/templates/: index.html
tests/: conftest.py  test_api.py  test_llm.py
